tests/paczka1/fuzzy1/22834826.err
Error in line 3: FOAJmJ A282 38,6
Error in line 14: FOAJmJ S452 34,2
Error in line 12: HgF S452 73,2
Error in line 16: FOAJmJ A615 9,9
Error in line 33: tpiX6ZQfNNq A387 54,36
Error in line 35: 0Wgk5O A387 -2,1
